Update migrations and prevent header reordering.

--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -22,7 +22,7 @@
                 </tr>
             </thead>
             {% for item in desk_one_blends %}
-                <tr class="{{item.line}}Row">
+                <tr class="{{item.line}}Row tableBodyRow">
                     <td class="orderCell">{{ item.order }}</td>
                     <td>{{ item.item_code }}</td>
                     <td>{{ item.item_description }}</td>
