--- a/app/core/templates/core/reports/maxproduciblequantity.html
+++ b/app/core/templates/core/reports/maxproduciblequantity.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}<title>Maximum Blends</title>{% endblock %}
+{% block title %}<title>Maximum Blend</title>{% endblock %}
 
 {% block content %}
     <div>
