Lay groundwork for protection lookup.

--- a/app/core/templates/core/lookuppages/lookupitemquantity.html
+++ b/app/core/templates/core/lookuppages/lookupitemquantity.html
@@ -25,6 +25,12 @@
             <h2>Qty On Hand:</h2>
             <div id="item_quantity"><em>Use search fields to display qty on hand.</em></div>
         </div>
+
+        <div id="itemProtectionContainer" style="display:none;">
+            <h2>Blend Protection Requirements</h2>
+            <div id="item_protection"></div>
+        </div>
+
         <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
         <br>
         <br>
