Remove Clear Entered button from schedules for non-admin.

--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -1,10 +1,12 @@
 {% load static %}
 {% if desk_two_blends %}
+    {% if user.is_staff %}
     <div class="buttonContainer">
         <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://192.168.178.169:1337/core/clear-entered-blends/?blend-area=Desk_2';">
             Clear Entered Blends
         </button>
     </div>
+    {% endif %}
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered" id="deskScheduleTable">
             <thead class="thead-dark">
