Groundwork for the blendcount changeover.

--- a/app/core/templates/core/inventorycounts/upcomingcomponents.html
+++ b/app/core/templates/core/inventorycounts/upcomingcomponents.html
@@ -10,7 +10,7 @@
         <h1>Select Components to Count</h1>
         <h5><em>Components shown in order of most recent transaction</em></h5>
         <br>
-        <a href="/core/count-records/">View all count records</a>
+        <a href="/core/count-records?recordType=component">View all component count records</a>
         <br>
         <button id="create_list">Create Count List</button>
         <br>
