--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -19,7 +19,7 @@
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-blend-counts">Make A Blend Count Sheet</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-component-counts">Make A Component Count Sheet</a></li>
-        <li><a class="dropdown-item" href="/core/count-records/">View All Counts</a></li>
+        <li><a class="dropdown-item" href="/core/count-records?recordType=blend">View All Blend Counts</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/display-all-chemical-locations">View Chemical Locations</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
