--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -16,7 +16,7 @@
         <li><a class="dropdown-item" href="/core/lot-num-records">Lot Numbers</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
-        <li><a class="dropdown-item" href="/core/count-records/">View All Counts</a></li>
+        <li><a class="dropdown-item" href="/core/count-records?recordType=blend">View All Blend Counts</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/display-all-chemical-locations">View Chemical Locations</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
