--- a/app/core/templates/core/adjustmentstatistics.html
+++ b/app/core/templates/core/adjustmentstatistics.html
@@ -10,7 +10,7 @@
         <h1>Adjustment Statistics</h1>
         <h5><em>Items available to select for counting below.</em></h5>
         <br>
-        <a href="/core/count-records/">View all count records</a>
+        <a href="/core/count-records?recordType=blend">View all blend count records</a>
         <br>
         <button id="create_list">Create Count List</button>
         <br>
