--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -13,7 +13,7 @@
         <div class="noPrint"><br></div>
     </div>
     {% if submitted %}
-        <a href='/core/count-records/?page=1'></a>
+        <a href='/core/count-records?recordType=blend&page=1'></a>
     {% else %}
         <div>
             <form action="" method=POST>
@@ -49,7 +49,7 @@
                         {% endfor %}
                         {% if user.is_staff %}
                             <td class="discardButtonCell text-center noPrint">
-                                <a class="discardButton noPrint" href="/core/delete-count-record/count-records/{{ encoded_list }}/{{ encoded_list }}">
+                                <a class="discardButton noPrint" href="/core/delete-count-record?redirectPage=count-records&listToDelete={{ encoded_list }}&fullList={{ encoded_full_list }}">
                                     Delete
                                 </a>
                             </td>
@@ -61,7 +61,7 @@
         <div class="text-center buttonContainer noPrint">
             <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save Counts</button>
             {% if user.is_staff %}
-                <a class="discardButton" href="/core/delete-count-record/count-records/{{ encoded_list }}/{{ encoded_list }}">
+                <a class="discardButton" href="/core/delete-count-record?redirectPage=count-records&listToDelete={{ encoded_list }}&fullList={{ encoded_full_list }}">
                     Delete All
                 </a>
             {% endif %}
