--- a/app/core/templates/core/inventorycounts/finishedcounts.html
+++ b/app/core/templates/core/inventorycounts/finishedcounts.html
@@ -36,7 +36,7 @@
         </table>
     </div>
     <div class='text-center'>
-        <a href='/core/count-records/'>Return to full count history</a> 
+        <a href='/core/count-records?recordType=blend'>Return to full blend count history</a> 
     </div>
 
 {% endblock content %}
