--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -49,7 +49,7 @@
                         {% endfor %}
                         {% if user.is_staff %}
                             <td class="discardButtonCell text-center noPrint">
-                                <a class="discardButton noPrint" href="/core/delete-count-record?redirectPage=count-records&listToDelete={{ encoded_list }}&fullList={{ encoded_full_list }}">
+                                <a class="discardButton noPrint" href="">
                                     Delete
                                 </a>
                             </td>
@@ -61,7 +61,7 @@
         <div class="text-center buttonContainer noPrint">
             <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save Counts</button>
             {% if user.is_staff %}
-                <a class="discardButton" href="/core/delete-count-record?redirectPage=count-records&listToDelete={{ encoded_list }}&fullList={{ encoded_full_list }}">
+                <a class="discardButton" href="">
                     Delete All
                 </a>
             {% endif %}
