Begin building warehousecount infrastructure.

--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -30,10 +30,10 @@
                                 <th scope="col" class="noPrint text-center">Variance</th>
                                 <th scope="col" class="noPrint text-center">Valid</th>
                                 <th scope="col" class="noPrint text-center">Type</th>
+                                <th scope="col" class="noPrint text-center">CID</th>
                                 {% if user.is_staff %}
                                     <th scope="col" class="noPrint text-center"></th>
                                 {% endif %}
-                                <th scope="col" class="noPrint text-center">Collection</th>
                             </tr>
                         </thead>
                 {{ these_counts_formset.management_form }}
