--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -31,7 +31,7 @@
                     <th scope="col">Valid?</th>
                     <th scope="col">Variance</th>
                     <th scope="col">Count Type</th>
-                    <th scope="col">Collection ID</th>
+                    <th scope="col">CID</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
