--- a/app/prodverse/templates/prodverse/itemstocount.html
+++ b/app/prodverse/templates/prodverse/itemstocount.html
@@ -22,16 +22,79 @@
             <input type="text" name="filter_criteria" maxlength="100" required="" id="id_filter_criteria" class="ui-autocomplete-input" autocomplete="off">
         </td>
         <td>
-            <label for="prefixLinks">Select Prefix:</label>
+            <label for="auditGroupLinks">Select Audit Group to Filter By:</label>
         </td>
         <td>
-            <select name="prefixLinks" id="prefixLinks">
-                <option value=""><a href="?page=1&prefixFilter=BOTTLE"></a></option>
-                <option value="">Saab</option>
-                <option value="">Mercedes</option>
-                <option value="">Audi</option>
+            <select name="auditGroupLinks" id="auditGroupLinks">
+                <option class='tableFilterOption' value="ADAPTER AUDIT">ADAPTER AUDIT</option>
+                <option class='tableFilterOption' value="ASSEMBLY & BAG & BAIL AUDIT">ASSEMBLY & BAG & BAIL AUDIT</option>
+                <option class='tableFilterOption' value="BLISTER AUDIT">BLISTER AUDIT</option>
+                <option class='tableFilterOption' value="BRUSH AUDIT">BRUSH AUDIT</option>
+                <option class='tableFilterOption' value="CAN AUDIT">CAN AUDIT</option>
+                <option class='tableFilterOption' value="CARD AUDIT 1">CARD AUDIT 1</option>
+                <option class='tableFilterOption' value="CARD AUDIT 2">CARD AUDIT 2</option>
+                <option class='tableFilterOption' value="CARD AUDIT 3">CARD AUDIT 3</option>
+                <option class='tableFilterOption' value="CARD AUDIT 4">CARD AUDIT 4</option>
+                <option class='tableFilterOption' value="CARD AUDIT 5">CARD AUDIT 5</option>
+                <option class='tableFilterOption' value="CARD AUDIT 6">CARD AUDIT 6</option>
+                <option class='tableFilterOption' value="CARD AUDIT 7">CARD AUDIT 7</option>
+                <option class='tableFilterOption' value="CARD AUDIT 8">CARD AUDIT 8</option>
+                <option class='tableFilterOption' value="CAP AUDIT 1">CAP AUDIT 1</option>
+                <option class='tableFilterOption' value="CAP AUDIT 2">CAP AUDIT 2</option>
+                <option class='tableFilterOption' value="CAP AUDIT 3">CAP AUDIT 3</option>
+                <option class='tableFilterOption' value="CAP AUDIT 4">CAP AUDIT 4</option>
+                <option class='tableFilterOption' value="CAP AUDIT 5">CAP AUDIT 5</option>
+                <option class='tableFilterOption' value="CAP AUDIT 6">CAP AUDIT 6</option>
+                <option class='tableFilterOption' value="INNER CARTON AUDIT #1">INNER CARTON AUDIT #1</option>
+                <option class='tableFilterOption' value="AMAZON INNER CARTON AUDIT">AMAZON INNER CARTON AUDIT</option>
+                <option class='tableFilterOption' value="AMAZON OUTER CARTON AUDIT">AMAZON OUTER CARTON AUDIT</option>
+                <option class='tableFilterOption' value="D RACK CARTON AUDIT ">D RACK CARTON AUDIT </option>
+                <option class='tableFilterOption' value="N RACK CARTON AUDIT  #1">N RACK CARTON AUDIT  #1</option>
+                <option class='tableFilterOption' value="N RACK CARTON AUDIT  #2">N RACK CARTON AUDIT  #2</option>
+                <option class='tableFilterOption' value="L RACK CARTON AUDIT #1 ">L RACK CARTON AUDIT #1 </option>
+                <option class='tableFilterOption' value="L RACK CARTON AUDIT #2 ">L RACK CARTON AUDIT #2 </option>
+                <option class='tableFilterOption' value="CARTON AUDIT #1 (by palletizer)">CARTON AUDIT #1 (by palletizer)</option>
+                <option class='tableFilterOption' value="CARTON AUDIT #2 (by palletizer)">CARTON AUDIT #2 (by palletizer)</option>
+                <option class='tableFilterOption' value="CARTON AUDIT #3 (by palletizer)">CARTON AUDIT #3 (by palletizer)</option>
+                <option class='tableFilterOption' value="CARTON AUDIT #4 (by palletizer)">CARTON AUDIT #4 (by palletizer)</option>
+                <option class='tableFilterOption' value="CARTON AUDIT #5  ">CARTON AUDIT #5  </option>
+                <option class='tableFilterOption' value="CARTON AUDIT #6  ">CARTON AUDIT #6  </option>
+                <option class='tableFilterOption' value="CLAM AUDIT">CLAM AUDIT</option>
+                <option class='tableFilterOption' value="CLIP & DISPLAY AUDIT">CLIP & DISPLAY AUDIT</option>
+                <option class='tableFilterOption' value="DIVIDER AUDIT">DIVIDER AUDIT</option>
+                <option class='tableFilterOption' value="DRUM AUDIT">DRUM AUDIT</option>
+                <option class='tableFilterOption' value="GREASE GUN AUDIT">GREASE GUN AUDIT</option>
+                <option class='tableFilterOption' value="HOLDER & HOSE AUDIT">HOLDER & HOSE AUDIT</option>
+                <option class='tableFilterOption' value="INSTRUCTIONS AUDIT">INSTRUCTIONS AUDIT</option>
+                <option class='tableFilterOption' value="JAR AUDIT">JAR AUDIT</option>
+                <option class='tableFilterOption' value="LID AUDIT">LID AUDIT</option>
+                <option class='tableFilterOption' value="PAD & PAIL & PLUG AUDIT">PAD & PAIL & PLUG AUDIT</option>
+                <option class='tableFilterOption' value="POUCH (raw material) AUDIT">POUCH (raw material) AUDIT</option>
+                <option class='tableFilterOption' value="POUCH (FILLED) AUDIT">POUCH (FILLED) AUDIT</option>
+                <option class='tableFilterOption' value="PUTTY STICK & REBATE & RUBBERBAND & SCOOP & SPONGE AUDIT">PUTTY STICK & REBATE & RUBBERBAND & SCOOP & SPONGE AUDIT</option>
+                <option class='tableFilterOption' value="SLEEVE AUDIT">SLEEVE AUDIT</option>
+                <option class='tableFilterOption' value="TOILET PAPER & TOOL & TRAY AUDIT">TOILET PAPER & TOOL & TRAY AUDIT</option>
+                <option class='tableFilterOption' value="TUB & TUBE AUDIT">TUB & TUBE AUDIT</option>
+                <option class='tableFilterOption' value="WINT KIT AUDIT">WINT KIT AUDIT</option>
+                <option class='tableFilterOption' value="WRENCH AUDIT">WRENCH AUDIT</option>
+                <option class='tableFilterOption' value="PURCHASED BOTTLE AUDIT #1  ">PURCHASED BOTTLE AUDIT #1  </option>
+                <option class='tableFilterOption' value="PURCHASED BOTTLE AUDIT #2  ">PURCHASED BOTTLE AUDIT #2  </option>
+                <option class='tableFilterOption' value="PURCHASED BOTTLE AUDIT #3">PURCHASED BOTTLE AUDIT #3</option>
+                <option class='tableFilterOption' value="KINPAK BOTTLE AUDIT 1">KINPAK BOTTLE AUDIT 1</option>
+                <option class='tableFilterOption' value="KINPAK BOTTLE AUDIT 2">KINPAK BOTTLE AUDIT 2</option>
+                <option class='tableFilterOption' value="KINPAK BOTTLE AUDIT 3">KINPAK BOTTLE AUDIT 3</option>
+                <option class='tableFilterOption' value="KINPAK BOTTLE AUDIT 4">KINPAK BOTTLE AUDIT 4</option>
+                <option class='tableFilterOption' value="KINPAK BOTTLE AUDIT 5">KINPAK BOTTLE AUDIT 5</option>
+                <option class='tableFilterOption' value="KINPAK BOTTLE AUDIT 6">KINPAK BOTTLE AUDIT 6</option>
+                <option class='tableFilterOption' value="KINPAK GREASE AUDIT ">KINPAK GREASE AUDIT </option>
+                <option class='tableFilterOption' value="KINPAK TEAK SEALER AUDIT  ">KINPAK TEAK SEALER AUDIT  </option>
+                <option class='tableFilterOption' value="KINPAK LET AUDIT  ">KINPAK LET AUDIT  </option>
+                <option class='tableFilterOption' value="CHEMICAL AUDIT #1">CHEMICAL AUDIT #1</option>
+                <option class='tableFilterOption' value="COLORANT & RESIN AUDIT">COLORANT & RESIN AUDIT</option>
+                <option class='tableFilterOption' value="FLAG AUDIT #1">FLAG AUDIT #1</option>
+                <option class='tableFilterOption' value="FLAG AUDIT #2">FLAG AUDIT #2</option>
+                <option class='tableFilterOption' value="FLAG AUDIT #3">FLAG AUDIT #3</option>
               </select>
-            <input type="select" name="prefixLinks" maxlength="100" required="" id="prefixLinks" class="ui-autocomplete-input" autocomplete="off">
         </td>
     </tr>
     <div id="selection_table" class="table-responsive-sm">
@@ -42,72 +105,22 @@
                     {% if user.is_staff %}<th scope="col" class='text-center'>Add to Count List</th>{% endif %}
                     <th scope="col" class='text-center'>Item</th>
                     <th scope="col" class='text-center'>Description</th>
+                    <th scope="col" class='text-center'>Audit Group</th>
                 </tr>
             </thead>
-            {% if paginated == 'yes' %}
-                {% for item in current_page.object_list %}
-                    <tr class="filterableRow">
-                        {% if user.is_staff %}<td class='text-center'>
-                            <input type="checkbox" name={{ item.item_code }}></input>
-                        </td>{% endif %}
-                        <td>
-                            {{ item.itemcode }}
-                        </td>
-                        <td>{{ item.itemcodedesc }}</td>
-                    </tr>
-                {% endfor %}
-            {% elif paginated == 'no' %}
-                {% for item in ci_item_queryset %}
-                    <tr class="filterableRow">
-                        {% if user.is_staff %}<td class='text-center'>
-                            <input type="checkbox" name={{ item.item_code }}></input>
-                        </td>{% endif %}
-                        <td>
-                            {{ item.itemcode }}
-                        </td>
-                        <td>{{ item.itemcodedesc }}</td>
-                    </tr>                
-                {% endfor %}
-            {% endif %}
+            {% for item in audit_group_queryset %}
+                <tr class="filterableRow">
+                    {% if user.is_staff %}<td class='text-center'>
+                        <input type="checkbox" name={{ item.item_code }}></input>
+                    </td>{% endif %}
+                    <td>
+                        {{ item.item_code }}
+                    </td>
+                    <td>{{ item.item_description }}</td>
+                    <td>{{ item.audit_group }}</td>
+                </tr>                
+            {% endfor %}
         </table>
-    </div>
-    <div class='text-center'>
-        <div id="page-links" class='text-center'>
-            <nav aria-label="Page navigation">   
-                <ul class="pagination justify-content-center">
-                    {% if current_page.has_previous %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page=1&prefixFilter={{ prefix_filter }}" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                                <span class="sr-only">First</span>
-                            </a>
-                        </li>   
-                    {% endif %}
-                    
-                    {% for n in current_page.paginator.page_range %}
-                        {% if current_page.number == n %}
-                            <li class="page-item active">
-                                <span class="page-link">{{ n }}<span class="sr-only"></span></span>
-                            </li>
-                        {% elif n > current_page.number|add:'-3' and n < current_page.number|add:'3' %}
-                            <li class="page-item"><a class="page-link" href="?page={{ n }}&prefixFilter={{ prefix_filter }}">{{ n }}</a></li>
-                        {% endif %}
-                    {% endfor %}
-                    {% if current_page.has_next %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ current_page.paginator.num_pages }}&prefixFilter={{ prefix_filter }}" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                                <span class="sr-only">Last</span>
-                            </a>
-                        </li>
-                    {% endif %}   
-                </ul> 
-            </nav>
-        </div>
-    <br>
-        <div>
-            Page {{ current_page.number }} of {{ current_page.paginator.num_pages }}
-        </div>
     </div>
     <script type="module" src="{% static './core/js/pageModules/itemsToCount.js' %}"></script>
 {% endblock content %}
