--- a/app/prodverse/templates/prodverse/itemstocount.html
+++ b/app/prodverse/templates/prodverse/itemstocount.html
@@ -102,7 +102,7 @@
         <table id="displayTable" class="table text-left table-bordered table-hover">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
-                    {% if user.is_staff %}<th scope="col" class='text-center'>Add to Count List</th>{% endif %}
+                    {% if user.is_staff %}<th scope="col" class='text-center'>Add to Count List<input type="checkbox" id="selectAllCheckbox"></th>{% endif %}
                     <th scope="col" class='text-center'>Item</th>
                     <th scope="col" class='text-center'>Description</th>
                     <th scope="col" class='text-center'>Audit Group</th>
@@ -111,7 +111,7 @@
             {% for item in audit_group_queryset %}
                 <tr class="filterableRow">
                     {% if user.is_staff %}<td class='text-center'>
-                        <input type="checkbox" name={{ item.item_code }}></input>
+                        <input type="checkbox" name={{ item.item_code }} class="checkbox"></input>
                     </td>{% endif %}
                     <td>
                         {{ item.item_code }}
